<resources>
    <string name="app_name">MiniEvent</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="description">Description</string>
    <string name="create_event">Create Event</string>
    <string name="time">Time</string>
    <string name="date">Date</string>

</resources>
